<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppColor"
    tools:context="com.example.hagar.steps.activities.MainActivity"
    android:id="@+id/relativeLayout2">


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/steps"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="213dp"
        android:background="@drawable/edit_txt_rounded_corners"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/edit_txt_rounded_corners"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_user_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_name"
        app:layout_constraintLeft_toLeftOf="@+id/edit_user_name" />

    <CheckBox
        android:id="@+id/chk_box_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="17dp"
        android:checked="true"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:text="@string/remember"
        app:layout_constraintStart_toStartOf="@+id/logo_img"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="@+id/logo_img" />

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:text="@string/forgot"
        app:layout_constraintBaseline_toBaselineOf="@+id/chk_box_remember"
        app:layout_constraintBottom_toBottomOf="@+id/chk_box_remember"
        app:layout_constraintEnd_toEndOf="@+id/logo_img"
        app:layout_constraintRight_toRightOf="@+id/logo_img" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="login"
        android:text="@string/enter"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/chk_box_remember"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="@+id/edit_password"
        app:layout_constraintRight_toRightOf="@+id/edit_password" />

    <Button
        android:id="@+id/login_fb_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fbLogin"
        android:layout_marginTop="10dp"
        android:text="@string/login_fb"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/login_fb_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
